@@ -40,7 +40,6 @@
 	<A HREF="/admin/?op=cancel-job&job_id={job_id}">
 	<IMG SRC="/images/cancel-job.gif" ALT="Cancel Job" BORDER="0"></A>
 	}
-	</FORM>
 	</TD>
 </TR>
 }
