@@ -1,6 +1,6 @@
 <TR>
 	<TH BGCOLOR="#999966"><IMG SRC="/images/left.gif" ALT=""></TH>
-	<TH BGCOLOR="#999966" COLSPAN="2">{group}</A></TH>
+	<TH BGCOLOR="#999966" COLSPAN="2">{group}</TH>
 	<TH><IMG SRC="/images/right.gif" ALT=""></TH>
 </TR>
 <TR>
